fixing gap in slider top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body {
     }
 
     .slider {
-        margin-top: 3.68rem !important;
+        margin-top: 3.5rem !important;
     }
 
     .slider .carousel-indicators {
